@@ -1,27 +1,23 @@
 package uk.nhs.ctp.registry;
 
+import java.util.Collections;
 import java.util.List;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 import uk.nhs.ctp.service.dto.HealthcareServiceDTO;
 
 @Component
 public class HealthcareServiceRegistry implements Registry<HealthcareServiceDTO> {
 
-  @Value("${ems.server}")
-  private String emsServer;
-
   public List<HealthcareServiceDTO> getAll() {
-    return List.of(HealthcareServiceDTO.builder()
+    return Collections.singletonList(HealthcareServiceDTO.builder()
         .id("HealthcareService/1")
         .active(true)
-        .endpoint(emsServer + "/fhir")
         .appointmentRequired(false)
         .name("Handover")
         .description("EMS handover service")
         .email("some@email.com")
         .phoneNumber("098765456787")
-        .provision(List.of("Free"))
+        .provision(Collections.singletonList("Free"))
         .build());
   }
 }
